<resources>

    <string name="app_name">Lonely Boardgamer</string>

    <!-- VK SDK -->
    <integer name="com_vk_sdk_AppId">7647393</integer>

    <!-- ################################################################################### -->

    <!-- Activities -->

    <!-- Error Activity -->
    <string name="error_activity_error_title">Что-то поломалось :(</string>
    <string name="error_activity_error_contact_us">
        Попробуйте перезапустить приложение.\n
        Если это не поможет, то напишите нам на:\n
        <b>ilyavlasov2011@gmail.com</b></string>

    <!-- Login Activity -->
    <string name="login_activity_vk_login_button">Войти с ВКонтакте</string>

    <!-- ################################################################################### -->

    <!-- Fragments -->

    <!-- Registration Fragment -->
    <string name="registration_fragment_label">Регистрация</string>
    <string name="registration_fragment_address_title">Ваше местоположение</string>
    <string name="registration_fragment_categories_title">Любимые категории</string>
    <string name="registration_fragment_mechanics_title">Любимые особенности</string>
    <string name="registration_fragment_about_me_title">О себе</string>
    <string name="registration_fragment_register_button">Зарегистрироваться</string>
    <string name="registration_fragment_text_view_hint">Нажмите для выбора</string>
    <string name="registration_fragment_about_me_hint">Нажмите для ввода</string>

    <string name="registration_fragment_categories_dialog_title">Укажите ваши любимые категории</string>

    <string name="registration_fragment_mechanics_dialog_title">Укажите ваши любимые особенности</string>

    <string name="registration_fragment_about_me_dialog_title">Расскажите о себе</string>
    <string name="registration_fragment_about_me_dialog_hint">Пишите здесь</string>

    <!-- My Profile Fragment -->
    <string name="my_profile_fragment_label">Профиль</string>
    <string name="my_profile_fragment_categories_title">Любимые категории</string>
    <string name="my_profile_fragment_mechanics_title">Любимые особенности</string>
    <string name="my_profile_fragment_about_me_title">О себе</string>
    <string name="my_profile_fragment_logout_button">Выйти</string>
    <string name="my_profile_fragment_empty_text_view_hint">Не указано</string>
    <string name="my_profile_fragment_avatar_content_description">Аватар пользователя</string>
    <string name="my_profile_fragment_edit_button_content_description">Редактировать</string>

    <string name="my_profile_fragment_logout_dialog_title">Вы действительно хотите выйти?</string>
    <string name="my_profile_fragment_logout_dialog_positive_button">Да</string>
    <string name="my_profile_fragment_logout_dialog_negative_button">Нет</string>

    <!-- Edit Profile Fragment -->
    <string name="edit_profile_fragment_label">Редактирование</string>
    <string name="edit_profile_fragment_address_title">Ваше местоположение</string>
    <string name="edit_profile_fragment_categories_title">Любимые категории</string>
    <string name="edit_profile_fragment_mechanics_title">Любимые особенности</string>
    <string name="edit_profile_fragment_about_me_title">О себе</string>
    <string name="edit_profile_fragment_empty_text_hint">Нажмите для изменения</string>
    <string name="edit_profile_fragment_edit_button">Изменить</string>

    <string name="edit_profile_fragment_categories_dialog_title">Укажите ваши любимые категории</string>
    <string name="edit_profile_fragment_mechanics_dialog_title">Укажите ваши любимые особенности</string>
    <string name="edit_profile_fragment_about_me_dialog_title">Расскажите о себе</string>
    <string name="edit_profile_fragment_about_me_dialog_hint">Пишите здесь</string>

    <!-- User Profile Fragment -->
    <string name="user_profile_fragment_label">Профиль</string>
    <string name="user_profile_fragment_categories_title">Любимые категории</string>
    <string name="user_profile_fragment_mechanics_title">Любимые особенности</string>
    <string name="user_profile_fragment_about_me_title">О себе</string>
    <string name="user_profile_fragment_send_button">Добавить в друзья</string>
    <string name="user_profile_fragment_answer_button">Ответить на запрос</string>
    <string name="user_profile_fragment_revoke_button">Отозвать запрос</string>
    <string name="user_profile_fragment_chat_button">Написать</string>
    <string name="user_profile_fragment_empty_text_hint">Не указано</string>
    <string name="user_profile_fragment_avatar_content_description">Аватар пользователя</string>
    <string name="user_profile_fragment_delete_button_content_description">Удалить</string>

    <string name="user_profile_fragment_answer_dialog_title">Принять запрос?</string>
    <string name="user_profile_fragment_answer_dialog_positive_button">Принять</string>
    <string name="user_profile_fragment_answer_dialog_negative_button">Отклонить</string>

    <string name="user_profile_fragment_unfriend_dialog_title">Вы действительно хотите удалить пользователя из друзей?</string>
    <string name="user_profile_fragment_unfriend_dialog_positive_button">Удалить</string>
    <string name="user_profile_fragment_unfriend_dialog_negative_button">Отменить</string>

    <!-- Search Fragment -->
    <string name="search_fragment_label">Поиск</string>
    <string name="search_fragment_retry_button">Повторить</string>

    <!-- Friends Fragment -->
    <string name="friends_fragment_label">Друзья</string>
    <string name="friends_fragment_retry_button">Повторить</string>

    <!-- In Requests Fragment -->
    <string name="in_requests_fragment_label">Полученные запросы</string>
    <string name="in_requests_fragment_retry_button">Повторить</string>

    <!-- Out Requests Fragment -->
    <string name="out_requests_fragment_label">Отправленные запросы</string>
    <string name="out_requests_fragment_retry_button">Повторить</string>

    <!-- Hidden Requests Fragment -->
    <string name="hidden_requests_fragment_label">Отклонённые запросы</string>
    <string name="hidden_requests_fragment_retry_button">Повторить</string>

    <!-- ################################################################################### -->

    <!-- View Item -->

    <!-- Load State Footer View Item -->
    <string name="load_state_footer_view_item_retry_button">Повторить</string>

    <!-- Profile List View Item -->
    <string name="profile_list_view_item_avatar_content_description">Аватар пользователя</string>

    <!-- Search Profile View Item -->
    <string name="search_profile_view_item_avatar_content_description">Аватар пользователя</string>

</resources>
