<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/myProfileFragment">

    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.twoIlya.android.lonelyboardgamer.fragments.registration.RegistrationFragment"
        android:label="@string/registration_fragment_label"
        tools:layout="@layout/fragment_registration">
        <action
            android:id="@+id/action_registrationFragment_to_myProfile"
            app:destination="@id/myProfileFragment"
            app:popUpTo="@id/registrationFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/myProfileFragment"
        android:name="com.twoIlya.android.lonelyboardgamer.fragments.myprofile.MyProfileFragment"
        android:label="@string/my_profile_fragment_label"
        tools:layout="@layout/fragment_my_profile">
        <action
            android:id="@+id/action_myProfileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.twoIlya.android.lonelyboardgamer.fragments.editprofile.EditProfileFragment"
        android:label="@string/edit_profile_fragment_label"
        tools:layout="@layout/fragment_edit_profile" />
</navigation>
