<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.twoIlya.android.lonelyboardgamer.fragments.myprofile.MyProfileViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:onRefreshListener="@{() -> viewModel.updateProfile()}"
        app:refreshing="@{viewModel.isLayoutRefreshing}">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/my_profile_fragment_avatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/my_profile_fragment_avatar_content_description"
                    app:imageUrl="@{viewModel.imageUrl}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/ic_user_placeholder" />

                <TextView
                    android:id="@+id/my_profile_fragment_name"
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{viewModel.name}"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/my_profile_fragment_avatar"
                    tools:text="Вася Пупкин" />

                <TextView
                    android:id="@+id/my_profile_fragment_address"
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@{viewModel.address}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/my_profile_fragment_name"
                    tools:text="Улица Пушкина, дом Колотушкина" />

                <TextView
                    android:id="@+id/my_profile_fragment_categories_title"
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/my_profile_fragment_categories_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/my_profile_fragment_address" />

                <TextView
                    android:id="@+id/my_profile_fragment_categories"
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/my_profile_fragment_empty_text_view_hint"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@{viewModel.categories}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/my_profile_fragment_categories_title"
                    tools:text="Люблю монополию" />

                <TextView
                    android:id="@+id/my_profile_fragment_mechanics_title"
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/my_profile_fragment_mechanics_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/my_profile_fragment_categories" />

                <TextView
                    android:id="@+id/my_profile_fragment_mechanics"
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/my_profile_fragment_empty_text_view_hint"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@{viewModel.mechanics}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/my_profile_fragment_mechanics_title"
                    tools:text="Люблю монополию" />

                <TextView
                    android:id="@+id/my_profile_fragment_about_me_title"
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/my_profile_fragment_about_me_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/my_profile_fragment_mechanics" />

                <TextView
                    android:id="@+id/my_profile_fragment_about_me"
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="32dp"
                    android:hint="@string/my_profile_fragment_empty_text_view_hint"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@{viewModel.description}"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@+id/logout_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/my_profile_fragment_about_me_title"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="Люблю монополию" />

                <Button
                    android:id="@+id/logout_button"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:drawablePadding="10dp"
                    android:enabled="@{viewModel.isFormEnabled}"
                    android:text="@string/my_profile_fragment_logout_button"
                    app:isLoading="@{viewModel.isButtonLoading}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:clickable="@{viewModel.isFormEnabled}"
                    android:contentDescription="@string/my_profile_fragment_edit_button_content_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_edit_30" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>
